--- a/proto_user_page.html
+++ b/proto_user_page.html
@@ -7,6 +7,7 @@
     <script data-require="angularjs@1.3.6" data-semver="1.3.6" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular.js"></script>
     <script src="proto_user_script.js"></script>
     <script src="user_service.js"></script>
+    <script src="profile_service.js"></script>
     <script src="proto_user_controller.js"></script>
     <style>
         td {
