--- a/pages/terms.html
+++ b/pages/terms.html
@@ -1,26 +1,32 @@
 <div class="terms-and-conditions">
     <h1>Terms and Conditions</h1>
     <p>Please read  and accept the Terms and Conditions to continue.</p>
-    <textarea>Terms and conditions:
 
-        Membership
-        The purpose of DoubleDateOC is matching up couples with other couples in their area for shared activities.
-        You must be age 18 or above.
-        You agree as a couple, jointly and severally, to represent yourselves honestly on DoubleDateOC.
-        You must use two separate, different emails (one for each person in the couple).
-        You agree to use reasonable security on your membership identification and password, to keep others from accessing the system through your credentials.
-        You agree that DoubleDateOC has the right to send your e-mail to another member after you and that other member have approved of one another.
-        DoubleDateOC agrees not to send out any e-mail address without the consent of both parties.
-        You recognize that DoubleDateOC has the right to monitor and moderate your use of the system, including denying further access to the system.
+    <div class="textarea">
+        <h2>Terms and conditions:</h2>
 
+        <h3>Membership</h3>
 
-        Terminating Membership
+          <li>The purpose of DoubleDateOC is matching up couples with other couples in their area for shared
+              activities.</li>
+        <li> You must be age 18 or above. </li>
+        <li>You agree as a couple, jointly and severally, to represent yourselves honestly on DoubleDateOC.</li>
+        <li>You must use two separate, different emails (one for each person in the couple).</li>
+        <li>You agree to use reasonable security on your membership identification and password, to keep others from accessing the system through your credentials.</li>
+        <li>You agree that DoubleDateOC has the right to send your e-mail to another member after you and that other member have approved of one another.</li>
+       <li> DoubleDateOC agrees not to send out any e-mail address without the consent of both parties.</li>
+        <li>You recognize that DoubleDateOC has the right to monitor and moderate your use of the system, including denying further access to the system.</li>
+        </ul>
+
+        <h3>Terminating Membership</h3>
+        <p>
         Both members of the couple must consent to use DoubleDateOC.  A single member of the couple may terminate the relationship with DoubleDateOC.  Emails will be sent to both members of the couple should this occur.  You may terminate your account at any time (moderator@doubledateoc.com).
         If you have not accessed (logged in) the DoubleDateOC website in more than 12 months, DoubleDateOC may send
         you an email to see if you’re still participating and may terminate the relationship if no satisfactory response has been made within a reasonable timeframe.
+        </p>
 
-
-        Expected Website Behavior
+        <h3>Expected Website Behavior</h3>
+        <p>
         You agree to not harass, stalk, embarrass, or solicit business from other DoubleDateOC members.
         You agree to notify DoubleDateOC of any other member that you believe is in violation of these rules (moderator@doubledateoc.com).
         DoubleDateOC will check your photo and paragraph for any unsuitable content.  If there is any unsuitable content, DoubleDateOC will notify you that a different photo will need to be used and/or paragraph will need to be edited that does not contain unsuitable content.
@@ -29,23 +35,26 @@
         any content advocating political agendas.
         any illegal activity.
         any content that does not support the purpose of DoubleDateOC.
+        </p>
 
-
-        Liability
+        <h3>Liability</h3>
+        <p>
         DoubleDateOC is only a mechanism for exchanging email addresses of members. You agree to not hold DoubleDateOC liable for the result of any interactions that occur due to exchanging these e-mails, or from the interactions and activities that take place based on this exchange of emails.
         DoubleDateOC will not be held liable if DoubleDateOC somehow deletes or corrupts your profile information.
+        </p>
 
+        <h3>Ownership of Content</h3>
+        <p>You agree not to duplicate, modify, copy, rent, lease, loan, adapt, reproduce, resell or create derivative
+             works based on any component of the service without express permission from DoubleDateOC.
+        </p>
 
-        Ownership of Content
-        You agree not to duplicate, modify, copy, rent, lease, loan, adapt, reproduce, resell or create derivative works based on any component of the service without express permission from DoubleDateOC.
-
-
-        Contacting DoubleDateOC
+        <h3>Contacting DoubleDateOC</h3>
+        <p>
         Any suggestions, comments, issues or questions may be directed to (moderator@doubledateoc.com).
         If you suspect  a security breach into your account, you must immediately contact DoubleDateOC of any unauthorized use of your account.
-
-    </textarea>
-    <input type="checkbox" ng-click="tc.acceptedTerms=!tc.acceptedTerms; tc.$log.log(tc.acceptedTerms) " >
+        </p>
+    </div>
+    <input type="checkbox"  ng-click="tc.acceptedTerms=!tc.acceptedTerms; tc.$log.log(tc.acceptedTerms) " >I accept the terms and conditions
     <button type="button" class="btn btn-default initialSubmit" ng-disabled="!tc.acceptedTerms">Join!</button>
 
 </div>
